- renamed function 'PARTIALDECOMP::getBlocksForRep' to 'PARTIALDECOMP::getBlocksForEqClass'
- renamed function 'PARTIALDECOMP::getNReps' to 'PARTIALDECOMP::getNEquivalenceClasses'
- renamed function 'PARTIALDECOMP::getRepForBlock' to 'PARTIALDECOMP::getEqClassForBlock'

Code cleanup:
-------------

- the explore dialog accesses (partial) decompositions now directly using pointers instead of their ids
- symmetry information stored for a decomposition is now used by the relaxator without creating intermediate varmaps


@page RN36 Release notes for GCG 3.6
@section RN360 GCG 3.6.0
*************************

New features:
-------------

- MSVC support

Bug fixes
---------

- fix separation of cutting planes in the master problem
- handle new variable bounds properly when synchronizing the B&B trees
- store pending bound changes as soon as the master problem is transformed
- fix handling of static master vars with negative lower bounds

New/changed parameters:
-----------------------

- New parameter 'detection/scores/selected' to select the score that should be used to sort the decompositions
- Removed parameter 'detection/score/scoretype'
- Moved parameter 'detection/score/strong_detection/dualvalrandommethod' to 'detection/scores/strong/dualvalrandommethod'
- Moved parameter 'detection/score/strong_detection/coeffactororigvsrandom' to 'detection/scores/strong/coeffactororigvsrandom'
- Moved parameter 'detection/score/strong_detection/timelimit' to 'detection/scores/strong/timelimit'

Renamed API functions:
---------------------------

- Replaced prefix 'DEC' with 'GCG'

Renamed structures and defines:
---------------------------

- Replaced prefix 'DEC' with 'GCG'

New/modified API functions:
---------------------------

- New functions: 'GCGconshdlrDecompGetNConsClassifiers', 'GCGconshdlrDecompGetNVarClassifiers', 'GCGconshdlrDecompGetConsClassifiers', 'GCGconshdlrDecompGetVarClassifiers'