@@ -167,7 +167,8 @@ GCG_EXPORT
 SCIP_RETCODE GCGtransformMastersolToOrigsol(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_SOL*             mastersol,          /**< solution of the master problem */
-   SCIP_SOL**            origsol             /**< pointer to store the new created original problem's solution */
+   SCIP_SOL**            origsol,            /**< pointer to store the new created original problem's solution */
+   SCIP_Bool             ignorevarbnds       /**< ignore (possibly violated) varbounds */
    );
 
 /** Checks whether the constraint belongs to GCG or not
