@@ -2038,7 +2038,7 @@ SCIP_RETCODE solveDiagonalBlocks(
 
    if( GCGgetDecompositionMode(scip) == GCG_DECMODE_ORIGINAL )
    {
-      SCIP_CALL( GCGtransformMastersolToOrigsol(scip, SCIPgetBestSol(relaxdata->masterprob), &newsol) );
+      SCIP_CALL( GCGtransformMastersolToOrigsol(scip, SCIPgetBestSol(relaxdata->masterprob), &newsol, FALSE) );
    }
    else
    {
@@ -2847,7 +2847,7 @@ SCIP_RETCODE relaxExecGcgDantzigWolfe(
 
          relaxdata->lastmastersol = SCIPgetBestSol(relaxdata->masterprob);
 
-         SCIP_CALL( GCGtransformMastersolToOrigsol(scip, relaxdata->lastmastersol, &newsol) );
+         SCIP_CALL( GCGtransformMastersolToOrigsol(scip, relaxdata->lastmastersol, &newsol, FALSE) );
    #ifdef SCIP_DEBUG
          SCIP_CALL( SCIPtrySol(scip, newsol, TRUE, TRUE, TRUE, TRUE, TRUE, &stored) );
    #else
@@ -2954,7 +2954,7 @@ SCIP_RETCODE solveMasterProblemAndEvaluate(
 
       relaxdata->lastmastersol = SCIPgetBestSol(relaxdata->masterprob);
 
-      SCIP_CALL( GCGtransformMastersolToOrigsol(scip, SCIPgetBestSol(relaxdata->masterprob), &newsol) );
+      SCIP_CALL( GCGtransformMastersolToOrigsol(scip, SCIPgetBestSol(relaxdata->masterprob), &newsol, FALSE) );
 #ifdef SCIP_DEBUG
       SCIP_CALL( SCIPtrySol(scip, newsol, TRUE, TRUE, TRUE, TRUE, TRUE, &stored) );
 #else
@@ -4377,7 +4377,7 @@ SCIP_RETCODE GCGrelaxEndProbing(
 
       relaxdata->lastmastersol = SCIPgetBestSol(masterprob);
 
-      SCIP_CALL( GCGtransformMastersolToOrigsol(scip, relaxdata->lastmastersol, &newsol) );
+      SCIP_CALL( GCGtransformMastersolToOrigsol(scip, relaxdata->lastmastersol, &newsol, FALSE) );
 
       SCIP_CALL( SCIPtrySol(scip, newsol, FALSE, FALSE, TRUE, TRUE, TRUE, &stored) );
       if( !stored )
@@ -4507,8 +4507,6 @@ SCIP_RETCODE GCGrelaxUpdateCurrentSol(
    {
       SCIP_SOL* mastersol;
 
-      relaxdata->lastmasterlpiters = SCIPgetNLPIterations(relaxdata->masterprob);
-
       /* create new solution */
       if( SCIPgetStage(relaxdata->masterprob) == SCIP_STAGE_SOLVING )
       {
@@ -4531,13 +4529,15 @@ SCIP_RETCODE GCGrelaxUpdateCurrentSol(
          return SCIP_OKAY;
       }
 
+      relaxdata->lastmasterlpiters = SCIPgetNLPIterations(relaxdata->masterprob);
+
       if( !SCIPisInfinity(scip, SCIPgetSolOrigObj(relaxdata->masterprob, mastersol)) && GCGmasterIsSolValid(relaxdata->masterprob, mastersol) )
       {
          int i;
          int j;
 
          /* transform the master solution to the original variable space */
-         SCIP_CALL( GCGtransformMastersolToOrigsol(scip, mastersol, &(relaxdata->currentorigsol)) );
+         SCIP_CALL( GCGtransformMastersolToOrigsol(scip, mastersol, &(relaxdata->currentorigsol), FALSE) );
 
          /* store the solution as relaxation solution */
          SCIP_CALL( SCIPsetRelaxSolValsSol(scip, relax, relaxdata->currentorigsol, RELAX_INCLUDESLP) );
